--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,5 +9,11 @@
 @import 'utilities';
 
 body {
-  background-color: $main-color;
+  background-color: white;
+  font-family: sans-serif;
+}
+
+header {
+  width: 100%;
+  height: 20%;
 }
