--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,7 +4,7 @@
 @import 'vars';
 @import 'mixins';
 @import 'type';
-@import 'tables';
+@import 'footer';
 @import 'header';
 @import 'utilities';
 
