--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,114 +1,111 @@
 header img {
-    align-items: center;
-    display: flex;
-    height: auto;
-    justify-content: center;
-    margin-left: 10%;
-    text-align: center;
-    width: 100px;
-    float: left;
+  align-items: center;
+  display: flex;
+  height: auto;
+  justify-content: center;
+  margin-left: 10%;
+  text-align: center;
+  width: 100px;
+  float: left;
 }
 
 .search {
-    border-bottom: 1px solid grey;
-    height: 20px;
-    width: 50%;
-    float: left;
-    margin-left: 4%;
-    display: flex;
-    align-items: center;
-    margin-top: 20px;
+  border-bottom: 1px solid grey;
+  height: 20px;
+  width: 50%;
+  float: left;
+  margin-left: 4%;
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
 }
 
 .clientArea {
-    height: 20px;
-    width: 20px;
-    float: left;
-    margin-top: 20px;
-    float: right;
-    margin-right: 10%;
+  height: 20px;
+  width: 20px;
+  float: left;
+  margin-top: 20px;
+  margin-right: 10%;
 }
 
 .cart {
-    height: 20px;
-    width: 20px;
-    float: right;
-    margin-top: 20px;
-    margin-right: 1%;
+  height: 20px;
+  width: 20px;
+  float: right;
+  margin-top: 20px;
+  margin-right: 1%;
 }
 
 span {
-    background-color: $main-color;
+  background-color: $main-color;
 }
 
 .navbar {
-    width: 100%;
-    height: 45px;
-    background-color: $main-color;
-    display: none;
-    line-height: 24px;
+  width: 100%;
+  height: 45px;
+  background-color: $main-color;
+  display: none;
+  line-height: 24px;
 
-    li {
-        float: left;
-        padding-right: 8%;
-        text-transform: uppercase;
-        padding-top: 10px;
-    }
-    ul {
-        margin-left: 10%;
-        margin-right: 10%;
-    }
-    a {
-        color: white;
-        text-decoration: none;
-        list-style-type: none;
-    }
+  li {
+    float: left;
+    padding-right: 8%;
+    text-transform: uppercase;
+    padding-top: 10px;
+  }
+
+  ul {
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+
+  a {
+    color: white;
+    text-decoration: none;
+    list-style-type: none;
+  }
 }
 
-
 .navbar a:hover h2 {
-    background: $second-color;
-    transition: 0.5s;
+  background: $second-color;
+  transition: 0.5s;
 }
 
 .menu {
-    width: 100%;
-    height: 35px;
-    background-color: $main-color;
-    color: white;
-    text-align: center;
-    line-height: 35px;
+  width: 100%;
+  height: 35px;
+  background-color: $main-color;
+  color: white;
+  text-align: center;
+  line-height: 35px;
 }
 
 /* screen size 401 and up */
 
-@media only screen and (min-width: 401px)
-	{
-        .menu {
-            display: block;
-        }
-        .container-header {
-            display: block;
-        }
-    }
+@media only screen and (min-width: 401px) {
+  .menu {
+    display: block;
+  }
 
-@media only screen and (max-width: 400px)
-    {
-        .search {
-            display: none;
-        }
-        //.container-header img {
-            
-        //}
-    }
+  .container-header {
+    display: block;
+  }
+}
 
-    @media only screen and (min-width: 768px)
-	{
-        .menu {
-            display: none;
-        }
+@media only screen and (max-width: 400px) {
+  .search {
+    display: none;
+  }
+  //.container-header img {
+  //}
+}
 
-        .navbar {
-            display: block;
-        }
-    }
+@media only screen and (min-width: 768px) {
+  .menu {
+    display: none;
+  }
+
+  .navbar {
+    display: block;
+  }
+}
