--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -1,24 +1,22 @@
 .contacts {
-    width: 100%;
-    height: 150px;
-    background-color: $main-color;
-    color: #ffffff;
-    text-align: center;
-    padding-top: 30px;
+  width: 100% !important;
+  height: 150px;
+  background-color: $main-color;
+  color: white;
+  text-align: center;
+  padding-top: 30px;
 }
-
 
 .policy {
-    width: 100%;
-    height: 150px;
-    background-color: darkgrey;
-    text-align: center;
-    padding-top: 35px;
+  width: 100% !important;
+  height: 150px;
+  background-color: darkgrey;
+  text-align: center;
+  padding-top: 35px;
 
-    a {
-        text-decoration: none;
-        list-style-type: none;
-        color: black;
-    }
+  a {
+    text-decoration: none;
+    list-style-type: none;
+    color: black;
+  }
 }
- 
