--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,7 +3,7 @@
 @import 'reset';
 @import 'vars';
 @import 'mixins';
-@import 'type';
+@import 'empresa';
 @import 'footer';
 @import 'header';
 @import 'utilities';
@@ -11,11 +11,16 @@
 body {
   background-color: white;
   font-family: sans-serif;
+  line-height: 1.6;
 }
 
 header {
   width: 100%;
   height: 20%;
+}
+
+.main {
+  margin: 0 10% 0 10%;
 }
 
 .slide-images {
@@ -34,8 +39,7 @@ header {
 .floor {
   width: auto;
   height: 460px;
-  margin-left: 10%;
-  margin-right: 10%;
+  margin: 0 10% 0 10%;
   background-color: grey;
 }
 
@@ -65,7 +69,7 @@ header {
 }
 
 .sales {
-  margin-left: 10%;
+  margin: 0 10% 0 10%;
   display: flex;
 }
 
