--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,7 @@
 
 @import 'reset';
 @import 'vars';
-@import 'mixins';
+@import 'contactos';
 @import 'empresa';
 @import 'footer';
 @import 'header';
