--- a/src/styles/_contactos.scss
+++ b/src/styles/_contactos.scss
@@ -14,5 +14,11 @@
 
 .icons {
   display: flex;
-  padding: 10px 0 10px 0;
+  padding: 10px 0 20px 0;
+  align-items: center;
+
+  div {
+    width: 50px;
+    height: 50px;
+  }
 }
