--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -16,6 +16,10 @@
   color: $main-color;
   float: right;
   padding-top: 10px;
+
+  a {
+    color: $main-color;
+  }
 }
 
 header img {
@@ -32,6 +36,7 @@ header img {
   display: none;
   width: 60%;
   float: left;
+  margin-left: 10%;
 }
 
 input[type=text] {
@@ -58,6 +63,11 @@ input[type=text]:focus {
     padding-right: 8%;
     text-transform: uppercase;
     padding-top: 10px;
+    height: 45px;
+  }
+
+  li:hover {
+    background-color: $second-color;
   }
 
   ul {
@@ -72,7 +82,7 @@ input[type=text]:focus {
   }
 }
 
-.navbar a:hover h2 {
+.navbar a:hover {
   background: $second-color;
   transition: 0.5s;
 }
@@ -86,8 +96,19 @@ input[type=text]:focus {
   line-height: 35px;
 }
 
-/* screen size 401 and up */
-@media only screen and (min-width: 401px) {
+.navbar-mobile {
+  display: none;
+  position: relative;
+  width: 100%;
+  height: 35px;
+  background-color: $main-color;
+  color: white;
+  text-align: center;
+  line-height: 35px;
+}
+
+/* screen size 501 and up */
+@media only screen and (min-width: 501px) {
   .menu {
     display: block;
   }
@@ -110,15 +131,28 @@ input[type=text]:focus {
   .navbar {
     display: block;
   }
+
+  .navbar-mobile {
+    display: none;
+  }
 }
 
-/* screen size 400 and down */
-@media only screen and (max-width: 400px) {
+/* screen size 500 and down */
+@media only screen and (max-width: 500px) {
   .clientArea {
-    font-size: 25px;
-    color: $main-color;
-    float: left;
-    padding-left: 10px;
-    padding-top: 10px;
+    position: relative;
+    left: 10%;
+  }
+
+  .cart {
+    position: relative;
+    left: 10%;
+  }
+}
+
+/* Input on focus to not move icons under 667px */
+@media only screen and (max-width: 667px) {
+  input[type=text]:focus {
+    width: 40%;
   }
 }
