--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -2,6 +2,11 @@
   clear: both;
 }
 
+@media only screen and (max-width: 599px) {
+  /* For mobile: */
+  .col-xs-12 { width: 100%; }
+}
+
 @media only screen and (min-width: 600px) {
   /* For tablets: */
   .col-s-1 { width: 8.33%; }
